# agent-learning-2026

Langchain_Tutorial/: pyproject.toml
Langchain_Tutorial/CH-1/: 1_LLM_Call.ipynb  2_Messages.ipynb  3_Structured_Outputs.ipynb
Langchain_Tutorial/CH-2/: 1_first_chain.ipynb  2_chat_with_customRunnable copy.ipynb  3_parallel_chains.ipynb  4_conditional_chains.ipynb
Langchain_Tutorial/CH-3/: 1_ReAct_Agent_Intro.ipynb  2_React_DB_Agent.ipynb  demo.py  init_db.py
Langchain_Tutorial/SalesDB/: sales.db
practice/: Models, Prompts, Parsers.py  hello_agent.py
