[project]
name = "langchain-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.15",
    "langchain-core>=1.2.30",
    "langchain-deepseek>=1.0.1",
    "langchain-openai>=1.1.13",
    "openai>=2.32.0",
]
