[project]
name = "langchain-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.30",
    "langchain-deepseek>=1.0.1",
    "langchain-openai>=1.1.13",
    "load-dotenv>=0.1.0",
    "openai>=2.32.0",
    "pydantic>=2.13.1",
    "wikipedia>=1.4.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter-client>=8.0",
    "pyzmq>=27.1.0",
]
